# wordle-solver

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  rust-analyzer.toml  tailwind.css
.github/workflows/: deploy.yml
assets/data/: guesses.json
src/: guess.rs  lib.rs  main.rs  reqs.rs
src/backend/: guess.rs  reqs.rs
src/frontend/: app.rs
src/frontend/app/: grid.rs  settings.rs  solutions.rs  wordlist.rs
src/logic/: guess.rs  reqs.rs
