[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2024"


[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.4", features = [ "Window", "Document", "HtmlElement", "Text", "HtmlInputElement" ] }
console_error_panic_hook = "0.1"

include_dir = "0.7"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
